[tool.poetry]
name = "alphabet-tui"
version = "0.1.0"
description = ""
authors = ["top-on <top-on@posteo.de>"]
readme = "README.md"
packages = [{ include = "alphabet_tui" }]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
